--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -2,6 +2,7 @@
 <head>
 	<link  href="./css/login.css" rel="stylesheet"/>
 	<link href="./css/bootstrap.css" rel="stylesheet"/>
+	<script src="./js/jquery.js"></script>
 
 </head>
 
@@ -33,6 +34,35 @@
 			alert("用户名或密码不能为空！");
 			return;
 		}
+		
+		$.ajax({
+			type : "POST",
+			url : "json/user_login.action",
+			data : {
+				username : user,
+				password : password
+			},
+			dataType : "json",
+			success : function(data, status) {
+				var result=data.result;
+				if(result == "failure"){
+					alert("用户名或密码错误！");
+					return;
+				}
+				else{
+					//projectleader, developer
+					window.location.href="homepage.html?role="+result; 
+					
+				}
+			},
+			error : function(XMLHttpRequest, textStatus, errorThrown) {
+				alert(XMLHttpRequest.status);
+				alert(XMLHttpRequest.readyState);
+				alert(textStatus);
+				alert("网络繁忙，请稍后再试");
+			}
+		});
+
 	}
 </script>
 
