更改字符编码

--- a/WebContent/pages/addRequirement.html
+++ b/WebContent/pages/addRequirement.html
@@ -2,18 +2,19 @@
 <head>
 	<link  href="./css/addRequirement.css" rel="stylesheet"/>
 	<link href="./css/bootstrap.css" rel="stylesheet"/>
-	
 	<script src="./js/addRequirement.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	
 </head>
 
 <body>
 	<div class="mainDiv">
-		<p style="text-align:center; margin-top:5%; font-size:22px">Ìí¼ÓÐèÇó</p>
+		<p style="text-align:center; margin-top:5%; font-size:22px">æ·»åŠ éœ€æ±‚</p>
 		<div>
-			<div class="requirementitem">¶ÔÓ¦µÄµü´ú£º<select id="select_iter" class="select_iter"></select></div>
-			<div class="requirementitem">ÐèÇóµÄÄÚÈÝ£º</div>
+			<div class="requirementitem">å¯¹åº”çš„è¿­ä»£ï¼š<select id="select_iter" class="select_iter"></select></div>
+			<div class="requirementitem">éœ€æ±‚çš„å†…å®¹ï¼š</div>
 			<textarea class="requirement_textarea"></textarea>
-			<div><button type="button" class="btn btn-primary requirementitem" style="margin-left:360px">Ìí¼Ó</button>
+			<div><button type="button" class="btn btn-primary requirementitem" style="margin-left:360px">æ·»åŠ </button>
 			</div>
 		</div>
 	</div>
