--- a/WebContent/pages/addRisk.html
+++ b/WebContent/pages/addRisk.html
@@ -2,34 +2,35 @@
 <head>
 	<link  href="./css/addRisk.css" rel="stylesheet"/>
 	<link href="./css/bootstrap.css" rel="stylesheet"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	
 	<script src="./js/addRisk.js"></script>
 </head>
 
 <body>
 	<div class="mainDiv">
-		<p style="text-align:center; margin-top:5%; font-size:22px">Ìí¼Ó·çÏÕ</p>
+		<p style="text-align:center; margin-top:5%; font-size:22px">æ·»åŠ é£Žé™©</p>
 		<div>
-			<div class="riskitem">¶ÔÓ¦µÄÐèÇó£º<select id="select_requirement" class="select_requirement"></select></div>
-			<div class="riskitem">·çÏÕÄÚÈÝ£º<input id="content" type="text" style="width:350px"></input></div>
-			<div class="riskitem">¿ÉÄÜÐÔ£º
+			<div class="riskitem">å¯¹åº”çš„éœ€æ±‚ï¼š<select id="select_requirement" class="select_requirement"></select></div>
+			<div class="riskitem">é£Žé™©å†…å®¹ï¼š<input id="content" type="text" style="width:350px"></input></div>
+			<div class="riskitem">å¯èƒ½æ€§ï¼š
 			<select id="possibility">
-				<option value ="high">¸ß</option>
-				<option value ="middle">ÖÐ</option>
-				<option value="low">µÍ</option>
+				<option value ="high">é«˜</option>
+				<option value ="middle">ä¸­</option>
+				<option value="low">ä½Ž</option>
 			</select>
 			</div>
-			<div class="riskitem">Ó°Ïì³Ì¶È£º
+			<div class="riskitem">å½±å“ç¨‹åº¦ï¼š
 			<select id="possibility">
-				<option value ="high">¸ß</option>
-				<option value ="middle">ÖÐ</option>
-				<option value="low">µÍ</option>
+				<option value ="high">é«˜</option>
+				<option value ="middle">ä¸­</option>
+				<option value="low">ä½Ž</option>
 			</select>
 			</div>
-			<div class="riskitem">´¥·¢Æ÷/ãÐÖµ£º<input id="trigger" type="text" style="width:200px"></input> </div>
-			<div class="riskitem">Ìá½»Õß£º<input id="subscriber" type="text" style="width:100px"></input> </div>
-			<div class="riskitem">¸ú×ÙÕß£º<input id="tracker" type="text" style="width:100px"></input> </div>
-			<div><button type="button" class="btn btn-primary riskitem" style="margin-left:360px">Ìí¼Ó</button>
+			<div class="riskitem">è§¦å‘å™¨/é˜ˆå€¼ï¼š<input id="trigger" type="text" style="width:200px"></input> </div>
+			<div class="riskitem">æäº¤è€…ï¼š<input id="subscriber" type="text" style="width:100px"></input> </div>
+			<div class="riskitem">è·Ÿè¸ªè€…ï¼š<input id="tracker" type="text" style="width:100px"></input> </div>
+			<div><button type="button" class="btn btn-primary riskitem" style="margin-left:360px">ï¿½ï¿½ï¿½</button>
 			</div>
 		</div>
 	</div>
