--- a/WebContent/pages/addIter.html
+++ b/WebContent/pages/addIter.html
@@ -8,11 +8,11 @@
 
 <body>
 	<div class="mainDiv">
-		<p style="text-align:center; margin-top:5%; font-size:22px">添加迭代</p>
+		<p style="text-align:center; margin-top:5%; font-size:22px">娣诲姞杩唬</p>
 		<div>
-			<div class="iteritem">添加的迭代：<select id="select_iter" class="select_iter"></select></div>
+			<div class="iteritem">娣诲姞鐨勮凯浠ｏ細<select id="select_iter" class="select_iter"></select></div>
 			
-			<div><button type="button" class="btn btn-primary" style="margin-top:30px; margin-left:380px">添加</button>
+			<div><button type="button" class="btn btn-primary" style="margin-top:30px; margin-left:380px">娣诲姞</button>
 			
 			</div>
 		</div>
