--- a/WebContent/pages/homepage.html
+++ b/WebContent/pages/homepage.html
@@ -13,14 +13,17 @@
 			<div id="tree" style="width:350px; float: left"></div>
 		
 			<div class="showDiv">
+				<div class="add_item" id="addRisk"><a href="addRisk.html">添加风险</a></div>
+				<div class="add_item" id="addRequirement"><a href="addRequirement.html">添加需求</a></div>
+				<div class="add_item" id="addIter"><a href="addIter.html">添加迭代</a></div>
 				<p style="margin-top:40px; font-size:20px; font-weight:bold;">风险条目</p>
 				<div style="text-align: left">
 					<div class="form_item"> 风险内容： <span id="item_content"></span></div>
-					<div class="form_item"> 可能性：<span id="item_possibility"></div>
-					<div class="form_item"> 影响程度： <span id="item_impact"></div>
-					<div class="form_item"> 触发器/阈值： <span id="item_trigger"></div>
-					<div class="form_item"> 提交者： <span id="item_subscriber"></div>
-					<div class="form_item"> 跟踪者： <span id="item_tracker"></div>
+					<div class="form_item"> 可能性：<span id="item_possibility"></span></div>
+					<div class="form_item"> 影响程度： <span id="item_impact"></span></div>
+					<div class="form_item"> 触发器/阈值： <span id="item_trigger"></span></div>
+					<div class="form_item"> 提交者： <span id="item_subscriber"></span></div>
+					<div class="form_item"> 跟踪者： <span id="item_tracker"></span></div>
 				</div>
 				
 				<p style="margin-top:40px; font-size:20px; font-weight:bold;">风险状态</p>
