--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -38,7 +38,7 @@
 		
 		$.ajax({
 			type : "POST",
-			url : "json/user_login.action",
+			url : "。。json/user_login.action",
 			data : {
 				username : user,
 				password : password
