--- a/WebContent/pages/homepage.html
+++ b/WebContent/pages/homepage.html
@@ -40,10 +40,7 @@
  
  
 	<script>
-		$('#tree').treeview({
-			data: getTree()
-		});
-
+		getTree();
 		$('#tree').on('nodeSelected', function(event, data) {
 			console.log(data);
 			console.log(data.text);
