--- a/WebContent/pages/addIter.html
+++ b/WebContent/pages/addIter.html
@@ -13,7 +13,7 @@
 		<div>
 			<div class="iteritem">添加的迭代：<select id="select_iter" class="select_iter"></select></div>
 			
-			<div><button type="button" class="btn btn-primary" style="margin-top:30px; margin-left:380px">添加</button>
+			<div><button type="button" class="btn btn-primary" style="margin-top:30px; margin-left:380px" onclick="add()">添加</button>
 			
 			</div>
 		</div>
