--- a/WebContent/pages/addIter.html
+++ b/WebContent/pages/addIter.html
@@ -4,6 +4,7 @@
 	<link href="./css/bootstrap.css" rel="stylesheet"/>
 	
 	<script src="./js/addIter.js"></script>
+	<script src="./js/jquery.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
