--- a/WebContent/pages/addRequirement.html
+++ b/WebContent/pages/addRequirement.html
@@ -15,7 +15,7 @@
 		<div>
 			<div class="requirementitem">对应的迭代：<select id="select_iter" class="select_iter"></select></div>
 			<div class="requirementitem" id="requirement_description">需求的内容：</div>
-			<textarea class="requirement_textarea"></textarea>
+			<textarea class="requirement_textarea" id="requirement_textarea"></textarea>
 			<div><button id="add_button" type="button" class="btn btn-primary requirementitem" style="margin-left:360px" onclick="add()">添加</button>
 			</div>
 		</div>
